tests/suite/fail/generated/types/fail_mod_bool_string.ny
fn main() {
    let _ = true % "a" //~ ERROR type mismatch in `arithmetic` operation
}
